Ready for check in 2

--- a/lib.Tests/lib.Tests.csproj
+++ b/lib.Tests/lib.Tests.csproj
@@ -16,6 +16,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\lib\lib.csproj" />
+    <ProjectReference Include="..\lib.Blazor\lib.Blazor.csproj" />
   </ItemGroup>
 
 </Project>
